--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -28,7 +28,7 @@
                 android:padding="2dp"
                 android:background="#fff"
                 android:elevation="1dp"
-                android:id="@+id/imageView"
+                android:id="@+id/pageImageView"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="16dp"
@@ -44,11 +44,15 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pageNameTx"
                 android:textSize="16sp"
-                app:layout_constraintTop_toTopOf="@+id/imageView"
-                android:layout_marginStart="22dp"
-                app:layout_constraintLeft_toRightOf="@+id/imageView"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="8dp" />
+                app:layout_constraintTop_toTopOf="@+id/pageImageView"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toRightOf="@+id/pageImageView"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintRight_toLeftOf="@+id/locationButton"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
+                app:layout_constraintHorizontal_bias="0.08" />
 
             <TextView
                 tools:text="TexTeTextViewxtViewtView"
@@ -56,12 +60,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/messageTx"
-                app:layout_constraintTop_toBottomOf="@+id/imageView"
-                app:layout_constraintLeft_toLeftOf="@+id/imageView"
-                android:layout_marginTop="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/pageImageView"
+                app:layout_constraintLeft_toLeftOf="@+id/pageImageView"
+                android:layout_marginTop="16dp"
+                app:layout_constraintRight_toLeftOf="@+id/locationButton"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp" />
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/relativeLayout"
                 app:layout_constraintTop_toBottomOf="@+id/messageTx"
@@ -74,13 +81,16 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:src="@mipmap/blynas_blet"
+                    tools:src="@mipmap/blynas"
                     app:imageUrl="@{item.mealImage}"
-                    android:id="@+id/imageView2"
+                    android:id="@+id/mealImageView"
                     android:adjustViewBounds="true"
                     android:padding="2dp"
                     android:background="#fff"
-                    android:elevation="1dp" />
+                    android:elevation="1dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
             </RelativeLayout>
 
@@ -92,7 +102,26 @@
                 app:layout_constraintLeft_toLeftOf="@+id/messageTx"
                 app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:textColor="@color/colorPrimaryDark" />
+
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:srcCompat="@drawable/ic_directions_black_24dp"
+                android:id="@+id/locationButton"
+                style="@style/Widget.AppCompat.ImageButton"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="8dp"
+                android:elevation="2dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/colorPrimary"
+                android:tint="#fff"
+                android:padding="8dp"
+                android:adjustViewBounds="true" />
 
         </android.support.constraint.ConstraintLayout>
 
