--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimary">#00bcd4</color>
     <color name="colorPrimaryDark">#0d93a4</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="nav_bar">#4800bcd4</color>
+    <color name="nav_bar">#200ce3ff</color>
 </resources>
