--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -24,7 +24,6 @@
             <ImageView
                 android:layout_width="36dp"
                 tools:src="@color/colorAccent"
-                app:imageUrl="@{item.pagePicture}"
                 android:padding="2dp"
                 android:background="#fff"
                 android:elevation="1dp"
@@ -40,7 +39,7 @@
                 tools:text="Hop Doc"
                 android:text="@{item.pageName}"
                 android:font='@{"Roboto-Medium"}'
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/pageNameTx"
                 android:textSize="16sp"
@@ -49,10 +48,9 @@
                 app:layout_constraintLeft_toRightOf="@+id/pageImageView"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintRight_toLeftOf="@+id/locationButton"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
-                app:layout_constraintHorizontal_bias="0.08" />
+                app:layout_constraintRight_toLeftOf="@+id/distanceTx"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp" />
 
             <TextView
                 tools:text="TexTeTextViewxtViewtView"
@@ -60,12 +58,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/messageTx"
-                app:layout_constraintTop_toBottomOf="@+id/pageImageView"
+                app:layout_constraintTop_toBottomOf="@+id/pageNameTx"
                 app:layout_constraintLeft_toLeftOf="@+id/pageImageView"
-                android:layout_marginTop="16dp"
-                app:layout_constraintRight_toLeftOf="@+id/locationButton"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp" />
+                android:layout_marginTop="24dp"
+                app:layout_constraintRight_toRightOf="@+id/distanceTx" />
 
             <RelativeLayout
                 android:layout_width="0dp"
@@ -82,7 +78,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:src="@mipmap/blynas"
-                    app:imageUrl="@{item.mealImage}"
                     android:id="@+id/mealImageView"
                     android:adjustViewBounds="true"
                     android:padding="2dp"
@@ -111,17 +106,29 @@
                 app:srcCompat="@drawable/ic_directions_black_24dp"
                 android:id="@+id/locationButton"
                 style="@style/Widget.AppCompat.ImageButton"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="8dp"
                 android:elevation="2dp"
                 android:background="@drawable/button_round"
                 android:backgroundTint="@color/colorPrimary"
                 android:tint="#fff"
                 android:padding="8dp"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="8dp" />
+
+            <TextView
+                android:text="50 km"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/distanceTx"
+                android:textAlignment="viewEnd"
+                android:gravity="end"
+                app:layout_constraintTop_toTopOf="@+id/pageNameTx"
+                app:layout_constraintRight_toLeftOf="@+id/locationButton"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp" />
 
         </android.support.constraint.ConstraintLayout>
 
