--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -1,137 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 
-    <data>
-        <variable name="item" type="lt.blackbrackets.kasvalgyt.api.models.EatingPlace"/>
-    </data>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
 
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#0600BCD4"
-        android:clipToPadding="false"
-        android:padding="8dp">
+        android:paddingBottom="16dp"
+        android:elevation="1dp">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="36dp"
+            tools:src="@color/colorAccent"
+            android:padding="2dp"
+            android:background="#fff"
+            android:elevation="1dp"
+            android:id="@+id/pageImageView"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_height="36dp" />
+
+        <TextView
+            tools:text="Hop Doc"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:background="#fefefe"
-            android:elevation="1dp">
+            android:id="@+id/pageNameTx"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="@+id/pageImageView"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/pageImageView"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintRight_toLeftOf="@+id/distanceTx"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp" />
+
+        <TextView
+            tools:text="TexTeTextViewxtViewtView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/messageTx"
+            app:layout_constraintTop_toBottomOf="@+id/pageNameTx"
+            app:layout_constraintLeft_toLeftOf="@+id/pageImageView"
+            android:layout_marginTop="24dp"
+            app:layout_constraintRight_toRightOf="@+id/distanceTx" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/relativeLayout"
+            app:layout_constraintTop_toBottomOf="@+id/messageTx"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:clipToPadding="false"
+            android:padding="16dp"
+            android:paddingBottom="8dp">
 
             <ImageView
-                android:layout_width="36dp"
-                tools:src="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@mipmap/blynas"
+                android:id="@+id/mealImageView"
+                android:adjustViewBounds="true"
                 android:padding="2dp"
                 android:background="#fff"
                 android:elevation="1dp"
-                android:id="@+id/pageImageView"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp"
-                android:layout_height="36dp" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-            <TextView
-                tools:text="Hop Doc"
-                android:text="@{item.pageName}"
-                android:font='@{"Roboto-Medium"}'
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/pageNameTx"
-                android:textSize="16sp"
-                app:layout_constraintTop_toTopOf="@+id/pageImageView"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toRightOf="@+id/pageImageView"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintRight_toLeftOf="@+id/distanceTx"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" />
+        </RelativeLayout>
 
-            <TextView
-                tools:text="TexTeTextViewxtViewtView"
-                android:text="@{item.message}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/messageTx"
-                app:layout_constraintTop_toBottomOf="@+id/pageNameTx"
-                app:layout_constraintLeft_toLeftOf="@+id/pageImageView"
-                android:layout_marginTop="24dp"
-                app:layout_constraintRight_toRightOf="@+id/distanceTx" />
+        <Button
+            android:text="@string/daugiau"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/openButton"
+            app:layout_constraintLeft_toLeftOf="@+id/messageTx"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/colorPrimaryDark" />
 
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/relativeLayout"
-                app:layout_constraintTop_toBottomOf="@+id/messageTx"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:clipToPadding="false"
-                android:padding="16dp"
-                android:paddingBottom="8dp">
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:srcCompat="@drawable/ic_directions_black_24dp"
+            android:id="@+id/locationButton"
+            style="@style/Widget.AppCompat.ImageButton"
+            android:elevation="2dp"
+            android:background="@drawable/button_round"
+            android:backgroundTint="@color/colorPrimary"
+            android:tint="#fff"
+            android:padding="8dp"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:src="@mipmap/blynas"
-                    android:id="@+id/mealImageView"
-                    android:adjustViewBounds="true"
-                    android:padding="2dp"
-                    android:background="#fff"
-                    android:elevation="1dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+        <TextView
+            tools:text="50 km"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/distanceTx"
+            android:textAlignment="viewEnd"
+            android:gravity="end"
+            app:layout_constraintTop_toTopOf="@+id/pageNameTx"
+            app:layout_constraintRight_toLeftOf="@+id/locationButton"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp" />
 
-            </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
-            <Button
-                android:text="Daugiau"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/openButton"
-                app:layout_constraintLeft_toLeftOf="@+id/messageTx"
-                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginTop="8dp"
-                android:textColor="@color/colorPrimaryDark" />
-
-            <ImageButton
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                app:srcCompat="@drawable/ic_directions_black_24dp"
-                android:id="@+id/locationButton"
-                style="@style/Widget.AppCompat.ImageButton"
-                android:elevation="2dp"
-                android:background="@drawable/button_round"
-                android:backgroundTint="@color/colorPrimary"
-                android:tint="#fff"
-                android:padding="8dp"
-                android:adjustViewBounds="true"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="8dp" />
-
-            <TextView
-                android:text="50 km"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/distanceTx"
-                android:textAlignment="viewEnd"
-                android:gravity="end"
-                app:layout_constraintTop_toTopOf="@+id/pageNameTx"
-                app:layout_constraintRight_toLeftOf="@+id/locationButton"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" />
-
-        </android.support.constraint.ConstraintLayout>
-
-    </FrameLayout>
-
-</layout>
+</RelativeLayout>
