--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <android.support.constraint.ConstraintLayout
-
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="16dp"
-        android:elevation="1dp">
+        android:layout_height="wrap_content">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:layout_width="36dp"
@@ -65,7 +62,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:clipToPadding="false"
             android:padding="16dp"
-            android:paddingBottom="8dp">
+            android:paddingBottom="0dp">
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:layout_width="match_parent"
@@ -91,7 +88,10 @@
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_marginTop="8dp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" />
 
         <ImageButton
             android:layout_width="48dp"
@@ -124,5 +124,11 @@
             android:layout_marginRight="16dp" />
 
     </android.support.constraint.ConstraintLayout>
+
+    <View
+        android:layout_below="@id/container"
+        android:layout_width="match_parent"
+        android:background="#11000000"
+        android:layout_height="1dp" />
 
 </RelativeLayout>
