--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,5 +36,10 @@
 
     </RelativeLayout>
 
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/myCoordinatorLayout">
+    </android.support.design.widget.CoordinatorLayout>
 
 </RelativeLayout>
